--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
   margin-bottom: 1rem;
 }
 
-.buttons button {
+.buttons  {
   padding: 0.8rem 2rem;
   border: none;
   margin-left: 0.2rem;
@@ -37,7 +37,7 @@ body {
 }
 
 
-.start {
+.resume {
   background: #3ed927;
   color: white;
 }
