--- a/src/App.css
+++ b/src/App.css
@@ -6,34 +6,26 @@ body {
 }
 
 .App {
-  width: 600px;
   margin: 0 auto;
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
   margin-top: 5rem;
   padding: 3rem 5rem;
   border-radius: 10px;
 }
 
 .time {
+  align-self: center;
   font-size: 8rem;
   margin-bottom: 1rem;
 }
 
-.buttons  {
+.button  {
+  width: 300px;
+  align-self: center;
   padding: 0.8rem 2rem;
-  border: none;
-  margin-left: 0.2rem;
-  font-size: 1rem;
-  cursor: pointer;
-  border-radius: 5px;
-  font-weight: bold;
-  transition: all 300ms ease-in-out;
-  transform: translateY(0);
-}
-
-.buttons button:hover {
-  transform: translateY(-2px);
+  display: flex;
+  justify-content: space-between;
 }
 
 
@@ -49,4 +41,11 @@ body {
 .reset {
   background: #fd7171;
   color: white;
+}
+
+button {
+  padding: 10px 20px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
 }
